--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,16 @@
 Thumbs.db
 ehthumbs.db
 
+# Vita related files
+build/
+*.suprx
+*.skprx
+*.vpk
+*.o
+*.bin
+*.elf
+*.velf
+
 # Folder config file
 Desktop.ini
 
